// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEntry component renders UI as expected 1`] = `
<div
  className="new-mood"
>
  <header>
    <h1
      className="new-mood-title"
    >
      New Mood
    </h1>
  </header>
  <section>
    <form
      id="record-mood"
      onSubmit={[Function]}
    >
      <div
        className="form-section"
      >
        <label
          htmlFor="mood-title"
        >
          Current Mood
        </label>
        <input
          name="title"
          onChange={[Function]}
          placeholder="Feeling weird"
          required={true}
          type="text"
        />
        <div
          className="error-message"
        >
          Please enter more than 1 character
        </div>
      </div>
      <div
        className="form-section"
      >
        <label
          htmlFor="mood-content"
        >
          Why am I feeling this way?
        </label>
        <textarea
          columns="30"
          name="content"
          onChange={[Function]}
          placeholder="Type your entry..."
          required={true}
          rows="15"
        />
        <div
          className="error-message"
        >
          Please enter more than 1 character.
        </div>
      </div>
      <div
        className="form-section"
      >
        <label
          htmlFor="time-mood"
        >
          How long did the mood last?
        </label>
        <input
          name="duration"
          onChange={[Function]}
          placeholder="1"
          required={true}
          type="number"
        />
      </div>
      <div
        className="form-section"
      >
        <p>
          Select mood range
        </p>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          required={true}
          type="radio"
          value="Balanced"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Balanced
          </span>
          <div
            className="mood-type-explanation"
          >
            This is a stable conditional mood people experience in a typical day. Things are balanced, and moods are not spiking high, and steeping low.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Low"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Low
          </span>
          <div
            className="mood-type-explanation"
          >
            Mood likes this has people unmotivated, and only wanting to get through the day with the least amount of effort. This could range from depressive to sad thoughts.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Extreme"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Extreme
          </span>
          <div
            className="mood-type-explanation"
          >
            When there is a rush of emotions that feels overpowering to where the person can still feel in control.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Erratic"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Erratic
          </span>
          <div
            className="mood-type-explanation"
          >
            Unable to manage the state of mood, and could, at any time, result in making regrettable and unforseen decisions.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Unsure"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Unsure
          </span>
          <div
            className="mood-type-explanation"
          >
            Sometimes moods cannot be labeled and we are unsure the exact mood we are experiencing. Try your best to describe it.
          </div>
        </label>
      </div>
      <button
        disabled="Please enter more than 1 character"
        type="submit"
      >
        Submit
      </button>
      <button
        type="reset"
      >
        Reset
      </button>
    </form>
  </section>
</div>
`;

exports[`AddEntry component renders an .AddEntry by default 1`] = `
<div
  className="new-mood"
>
  <header>
    <h1
      className="new-mood-title"
    >
      New Mood
    </h1>
  </header>
  <section>
    <form
      id="record-mood"
      onSubmit={[Function]}
    >
      <div
        className="form-section"
      >
        <label
          htmlFor="mood-title"
        >
          Current Mood
        </label>
        <input
          name="title"
          onChange={[Function]}
          placeholder="Feeling weird"
          required={true}
          type="text"
        />
        <ValidateError
          message="Please enter more than 1 character"
        />
      </div>
      <div
        className="form-section"
      >
        <label
          htmlFor="mood-content"
        >
          Why am I feeling this way?
        </label>
        <textarea
          columns="30"
          name="content"
          onChange={[Function]}
          placeholder="Type your entry..."
          required={true}
          rows="15"
        />
        <ValidateError
          message="Please enter more than 1 character."
        />
      </div>
      <div
        className="form-section"
      >
        <label
          htmlFor="time-mood"
        >
          How long did the mood last?
        </label>
        <input
          name="duration"
          onChange={[Function]}
          placeholder="1"
          required={true}
          type="number"
        />
        <ValidateError />
      </div>
      <div
        className="form-section"
      >
        <p>
          Select mood range
        </p>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          required={true}
          type="radio"
          value="Balanced"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Balanced
          </span>
          <div
            className="mood-type-explanation"
          >
            This is a stable conditional mood people experience in a typical day. Things are balanced, and moods are not spiking high, and steeping low.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Low"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Low
          </span>
          <div
            className="mood-type-explanation"
          >
            Mood likes this has people unmotivated, and only wanting to get through the day with the least amount of effort. This could range from depressive to sad thoughts.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Extreme"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Extreme
          </span>
          <div
            className="mood-type-explanation"
          >
            When there is a rush of emotions that feels overpowering to where the person can still feel in control.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Erratic"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Erratic
          </span>
          <div
            className="mood-type-explanation"
          >
            Unable to manage the state of mood, and could, at any time, result in making regrettable and unforseen decisions.
          </div>
        </label>
        <input
          className="mood-type-radio"
          name="mood_type"
          onChange={[Function]}
          type="radio"
          value="Unsure"
        />
        <label
          htmlFor="mood-type"
        >
          <span>
            Unsure
          </span>
          <div
            className="mood-type-explanation"
          >
            Sometimes moods cannot be labeled and we are unsure the exact mood we are experiencing. Try your best to describe it.
          </div>
        </label>
      </div>
      <button
        disabled="Please enter more than 1 character"
        type="submit"
      >
        Submit
      </button>
      <button
        type="reset"
      >
        Reset
      </button>
    </form>
  </section>
</div>
`;
